--- a/couponBase/package.json
+++ b/couponBase/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
+    "fs": "0.0.1-security",
     "randomstring": "^1.2.2"
   },
   "devDependencies": {}
